--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@emotion/css": "^11.9.0"
+    "@emotion/css": "^11.9.0",
+    "nanoid": "^4.0.0"
   }
 }
