--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
       "limit": "10 KB"
     }
   ],
+  "jest":{
+    "setupFilesAfterEnv":["./setupTests.js"]
+  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@size-limit/preset-small-lib": "^7.0.8",
@@ -61,6 +64,8 @@
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "babel-loader": "^8.2.5",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
